--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "libphonenumber-js": "^1.12.31",
+    "lucide-react": "^0.560.0",
     "next": "16.0.8",
+    "papaparse": "^5.5.3",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "twilio": "^5.10.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
