--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "libphonenumber-js": "^1.12.31",
     "lucide-react": "^0.560.0",
     "next": "16.0.8",
+    "next-auth": "^4.24.13",
     "papaparse": "^5.5.3",
     "react": "19.2.1",
     "react-dom": "19.2.1",
